# ospsd-team-05

./: .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  mkdocs.yml  openapi-config.yaml  openapi.json  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
components/ai_client_api/: README.md  pyproject.toml
components/ai_client_api/src/ai_client_api/: __init__.py  client.py  models.py
components/calendar_client_adapter/: README.md  pyproject.toml
components/calendar_client_adapter/src/calendar_client_adapter/: adapter.py
components/calendar_client_adapter/tests/: test_adapter.py  test_integration.py
components/calendar_client_api/: README.md  pyproject.toml
components/calendar_client_api/src/calendar_client_api/: __init__.py  client.py  event.py  exceptions.py  task.py
components/calendar_client_api/tests/: test_calendar_client_api.py  test_event_abstraction.py  test_task_abstraction.py
components/calendar_client_service/: README.md  pyproject.toml
components/calendar_client_service/src/calendar_client_service/: __init__.py  ai_tools.py  app.py  auth_routes.py  dependencies.py  event_routes.py  models.py  slack_routes.py  task_routes.py
components/calendar_client_service/tests/: test_ai_tools.py  test_auth_routes.py  test_dependencies.py  test_event_routes.py  test_slack_routes.py  test_task_routes.py
components/calendar_client_service_api_client/: README.md  pyproject.toml
components/calendar_client_service_api_client/calendar_client_service_api_client/: __init__.py
components/calendar_client_service_api_client/calendar_client_service_api_client/api/auth/: auth_status_auth_status_get.py  callback_auth_callback_get.py  login_auth_login_get.py  logout_auth_logout_post.py
components/calendar_client_service_api_client/calendar_client_service_api_client/api/events/: create_event_events_post.py  delete_event_events_event_id_delete.py  get_event_events_event_id_get.py  list_events_events_get.py  update_event_events_event_id_put.py
components/calendar_client_service_api_client/calendar_client_service_api_client/api/health/: health_health_get.py
components/calendar_client_service_api_client/calendar_client_service_api_client/api/slack/: slack_events_slack_events_post.py
components/calendar_client_service_api_client/calendar_client_service_api_client/api/tasks/: complete_task_tasks_task_id_complete_post.py  create_task_tasks_post.py  delete_task_tasks_task_id_delete.py  get_task_tasks_task_id_get.py  list_tasks_tasks_get.py  update_task_tasks_task_id_put.py
components/calendar_client_service_api_client/calendar_client_service_api_client/models/: __init__.py  auth_status_response.py  event_create.py  event_response.py  event_update.py  health_response.py  slack_events_slack_events_post_response_slack_events_slack_events_post.py  task_create.py  task_response.py  task_update.py
components/calendar_client_service_api_client/tests/: test_smoke.py
components/gemini_ai_client_impl/: README.md  pyproject.toml
components/gemini_ai_client_impl/src/gemini_ai_client_impl/: __init__.py  client.py
components/google_calendar_client_impl/: Calendar_README.md  README.md  pyproject.toml
components/google_calendar_client_impl/src/google_calendar_client_impl/: __init__.py  auth.py  event_impl.py  google_calendar_impl.py  task_impl.py
components/google_calendar_client_impl/tests/: __init__.py  test_auth.py  test_event_impl.py  test_google_calendar_impl.py  test_task_impl.py
components/google_calendar_client_impl/tests/integration/: conftest.py  test_client_integration.py  test_injection.py
components/google_calendar_client_impl/tests/unit/: test_event_impl.py  test_task_impl.py
components/slack_chat_adapter/: README.md  pyproject.toml
components/slack_chat_adapter/src/slack_chat_adapter/: __init__.py  adapter.py
docs/: calendar_client_adapter.md  calendar_client_api.md  calendar_client_service.md  calendar_client_service_api_client.md  event_impl.md  google_calendar_client_impl.md  index.md  task_impl.md
infra/: .gitignore  cloudrun.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
md/: Calendar_README.md  README.md  calendar_client_api.md  google_calendar_client_impl.md  index.md  mkdocs.yml
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/e2e/: conftest.py  test_events_e2e.py  test_tasks_e2e.py
tests/integration/: conftest.py  test_ai_tool_dispatch.py  test_client_integration.py  test_injection.py  test_slack_integration.py
