[project]
name = "ospsd-team-05"
version = "0.1.0"
description = "Repository for a calendar client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "components/calendar_client_api",
    "components/google_calendar_client_impl",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests", "components/*/tests"]

[tool.coverage.report]
fail_under = 80