[project]
name = "ospsd-team-05"
version = "0.1.0"
description = "Repository for a calendar client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "components/calendar_client_api",
    "components/google_calendar_client_impl",
    "components/calendar_client_service",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # One-blank-line-before-class
    "D212", # Multi-line-summary-first-line
    "COM812", # Trailing comma
    "ISC001", # Implicit string concatenation
    "S101",   # Use of assert detected (Standard for pytest)
    "T201",   # Print statements (Used for scaffolding/demo)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001"] # ignores implicit namespace for tests
"**/tests/**/*.py" = ["INP001"] # ignores implicit namespace for tests

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = [
    "components/calendar_client_api/src",
    "components/google_calendar_client_impl/src",
    "components/calendar_client_service/src",
    "tests",
    "components/google_calendar_client_impl/tests",
]

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google.auth.*",
    "google.oauth2.*",
    "google_auth_oauthlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "components/calendar_client_api/src",
  "components/google_calendar_client_impl/src",
  "components/calendar_client_service/src",
]
testpaths = ["tests", "components/*/tests"]
addopts = [
  "--cov=calendar_client_api",
  "--cov=google_calendar_client_impl",
  "--cov=calendar_client_service",
  "--cov-report=term-missing",
  "--cov-report=html:coverage-reports/htmlcov",
  "--cov-report=xml:coverage-reports/coverage.xml",
]
markers = [
    "e2e: mark test as an end-to-end test",
]

[tool.coverage.run]
source = [
  "components/calendar_client_api/src",
  "components/google_calendar_client_impl/src",
  "components/calendar_client_service/src",
]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "httpx>=0.27.0",
]
