[project]
name = "ai-client-api"
version = "0.1.0"
description = "Abstract AI client API (interface only, no provider code)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_client_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_client_api/py.typed" = "ai_client_api/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []
