[project]
name = "calendar-client-api"
version = "0.1.0"
description = "calendar client api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_client_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/calendar_client_api/py.typed" = "calendar_client_api/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []