[project]
name = "calendar-client-service"
version = "0.1.0"
description = "FastAPI service exposing the calendar client over HTTP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "google-calendar-client-impl",
    "calendar-client-api",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "ai-client-api",
    "gemini-ai-client-impl",
    "slack-chat-adapter",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-gcp-trace>=1.6",
    "opentelemetry-exporter-gcp-monitoring>=1.11.0a0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.27.0",       # required by FastAPI TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calendar_client_service"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.uv.sources]
calendar-client-api = { workspace = true }
google-calendar-client-impl = { workspace = true }
ai-client-api = { workspace = true }
gemini-ai-client-impl = { workspace = true }
slack-chat-adapter = { workspace = true }
