[project]
name = "gemini-ai-client-impl"
version = "0.1.0"
description = "Google Gemini implementation of the AbstractAIClient"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai-client-api",
    "google-generativeai>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_ai_client_impl"]

[tool.hatch.build.targets.wheel.force-include]
"src/gemini_ai_client_impl/py.typed" = "gemini_ai_client_impl/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.uv.sources]
ai-client-api = { workspace = true }
