[project]
name = "slack-chat-adapter"
version = "0.1.0"
description = "Slack implementation of the shared ChatClient ABC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chat-client-api",
    "slack-sdk>=3.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_chat_adapter"]

[tool.hatch.build.targets.wheel.force-include]
"src/slack_chat_adapter/py.typed" = "slack_chat_adapter/py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.uv.sources]
chat-client-api = { git = "https://github.com/HarshithKoriRaj/Shared-API" }
